--- a/content/post/checkpoint-chronicle-october-2024.adoc
+++ b/content/post/checkpoint-chronicle-october-2024.adoc
@@ -6,6 +6,8 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Checkpoint Chronicle
 image: "/images/2024/10/GbJlq-TXAAAUG6a.jpg"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/checkpoint-chronicle-october-2024"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/checkpoint-chronicle-october-2024[Decodable blog].
@@ -16,13 +18,13 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 <!--more-->
 
-=== Stream Processing, Streaming SQL, and Streaming Databases
+== Stream Processing, Streaming SQL, and Streaming Databases
 * Last week saw the 10th anniversary of Apache Flink celebrated at Flink Forward in Berlin. Ververica announced  link:https://www.ververica.com/blog/introducing-fluss[Fluss] , which is _river_ in German—and they’ve managed to crowbar into an acronym too: FLink Unified Streaming Storage. It’s a proprietary project currently but slated for release into open source and donation to Apache Software Foundation as a standalone project. Fluss is a streaming platform providing both low-latency analytics as well as Iceberg or Paimon-backed batch analytics. Read more in the  link:https://www.ververica.com/blog/introducing-fluss[announcement blog post]  as well as my colleague Sharon Xie’s  link:https://www.linkedin.com/posts/sharonxr_fluss-flinkforward-lakehouse-activity-7255711357520551936-YLXI[post on LinkedIn] .
 * The first  link:https://flink.apache.org/downloads/#apache-flink-20-preview1[preview release]  of Flink 2.0 is out now. Check out the  link:https://flink.apache.org/2024/10/23/preview-release-of-apache-flink-2.0/[blog post]  to learn more about what’s new, as well as details of breaking API changes. Related to this also is  link:https://www.alibabacloud.com/blog/evolution-of-flink-2-0-state-management-storage-computing-separation-architecture_601133[details of changes to Flink’s state management]  which Yuan Mei shared earlier this year.
 * link:https://drasi.io/[Drasi]  is an open-source project from Microsoft. It combines CDC with event processing, using Neo4j's Cypher language. In another vindication for open source standards, it supports Debezium's CDC format for output. Read more  link:https://azure.microsoft.com/en-us/blog/drasi-microsofts-newest-open-source-project-simplifies-change-detection-and-reaction-in-complex-systems/[here]  and  link:https://www.infoworld.com/article/3555078/microsofts-drasi-a-lightweight-approach-to-event-driven-programming.html[here] .
 
 
-=== Event Streaming
+== Event Streaming
 * New event streaming platforms are  link:https://www.merriam-webster.com/dictionary/ten%20a%20penny[ten-a-penny]  these days, but  link:https://github.com/iggy-rs/iggy[Iggy.rs]  stands out for not being Apache Kafka protocol compatible. You can read more about its  link:https://blog.iggy.rs/posts/building-message-streaming-in-rust/[genesis and philosophy] , and its  link:https://blog.iggy.rs/posts/technology-radar-and-currrent-goals/[roadmap] .
 * There’s nothing _fishy_ about this one—Tom Cooper has published a nice tool called  link:https://tomncooper.github.io/kipper/[Kipper]  which lists the Apache Kafka KIPs, their age, and relative activity based on mailing list traffic.
 * Some useful notes from Jacob Scholz about the forthcoming  link:https://strimzi.io/blog/2024/08/21/taming-apache-kafka-4.0/[Apache Kafka 4.0]  release including the work that the Strimzi project is putting into supporting it.
@@ -30,7 +32,7 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * Interesting  link:https://medium.com/google-cloud/the-schema-registry-api-is-not-how-you-use-schema-with-kafka-3adb92f09764[hands-on exploration]  from Kir Titievsky of Kafka's KafkaAvroSerializer and KafkaAvroDeserializer—with a bonus  link:https://bsky.app/profile/rmoff.net/post/3l7dq7tlg6u2p[discussion about the use of Avro]  vs other serialisation formats in Kafka.
 
 
-=== Data Ecosystem
+== Data Ecosystem
 * Sudhendu Pandey has a  link:https://medium.com/snowflake/polaris-catalog-if-you-have-been-napping-9005909dc1fa[useful primer on Polaris catalog]  and data catalogs in general.
 * Instead of drip-feeding the plethora of posts that Jack Vanlightly has been writing about open table formats recently I’m going to list several of them here together for your delectation and enjoyment:some text
 * link:https://jack-vanlightly.com/blog/2024/9/19/table-format-comparisons-change-queries-and-cdc[A summary of Change Query and CDC Support]  plus deep-dives covering  link:https://jack-vanlightly.com/analyses/2024/9/23/change-query-support-in-apache-iceberg-v2[Iceberg] ,  link:https://jack-vanlightly.com/analyses/2024/10/9/change-query-support-in-apache-paimon[Paimon] ,  link:https://jack-vanlightly.com/analyses/2024/9/24/change-query-support-in-delta-lake[Delta Lake] , and  link:https://jack-vanlightly.com/analyses/2024/9/27/change-query-support-in-apache-hudi[Hudi]
@@ -42,21 +44,21 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * An interesting post from Xiangpeng Hao about  link:https://blog.haoxp.xyz/posts/parquet-to-arrow/[Parquet pruning]  in Apache DataFusion.  link:https://datafusion.apache.org/[DataFusion]  is a query engine and worth looking at too if you haven’t already.
 
 
-=== Data Platforms and Architecture
+== Data Platforms and Architecture
 * A  link:https://medium.com/smartnews-inc/flink-based-iceberg-real-time-data-lake-in-smartnews-part-i-19a7628ce110[couple]  of  link:https://medium.com/smartnews-inc/flink-based-iceberg-real-time-data-lake-in-smartnews-part-2-f3e2bbe9d63e[posts]  from last year by SmartNews detailing a move from batch-based Spark-driven warehouse on Iceberg to a streaming-based Flink-driven warehouse, the reasonings, and detail around Iceberg housekeeping.
-* ngrok is  link:https://rmoff.net/categories/ngrok/[one of my favourite tools to use] , and so I was particularly interested to see  link:https://ngrok.com/blog-post/how-we-built-ngroks-data-platform[this article]  detailing how their data platform is built. The streaming part uses Kafka and Flink, and they hold the data in Iceberg format. There’s also a batch component of their platform which they’ve  link:https://ngrok.com/blog-post/how-ngrok-uses-dagster-to-run-our-data-platform[also written about] .
+* ngrok is  link:link:/categories/ngrok/[one of my favourite tools to use] , and so I was particularly interested to see  link:https://ngrok.com/blog-post/how-we-built-ngroks-data-platform[this article]  detailing how their data platform is built. The streaming part uses Kafka and Flink, and they hold the data in Iceberg format. There’s also a batch component of their platform which they’ve  link:https://ngrok.com/blog-post/how-ngrok-uses-dagster-to-run-our-data-platform[also written about] .
 * Fascinating look at the performance benefits seen by rearchitecting a system to use  link:https://wafris.org/blog/rearchitecting-for-sqlite[SQLite instead of Redis] . I love the kind of performance analysis and thinking that’s gone into this one, particularly since it’s not a like-for-like switch out, but a different way of architecting reads and writes.
 * Discord has become pretty popular in recent years as a chat platform similar to Slack, so you can imagine they have a fair amount of data to deal with. In 2022 they were running 177 Cassandra nodes holding _trillions_ of chat messages.  link:https://discord.com/blog/how-discord-stores-trillions-of-messages[This blog]  details the troubles they had with this, and their eventual migration to ScyllaDB.
 
 
-=== RDBMS and Change Data Capture
-* When it comes to CDC I’ve found some people ‘get it’, whilst others are perhaps not even aware of it as a technique and tie themselves up in knots when CDC is the perfect solution. This is what drove my latest blog post:  link:https://www.decodable.co/blog/why-do-i-need-cdc[Why Do I Need CDC?]
+== RDBMS and Change Data Capture
+* When it comes to CDC I’ve found some people ‘get it’, whilst others are perhaps not even aware of it as a technique and tie themselves up in knots when CDC is the perfect solution. This is what drove my latest blog post:  link:/2024/10/15/why-do-i-need-cdc/[Why Do I Need CDC?]
 * Yelp migrated from Postgres to MySQL, for the simple reason that MySQL is that Yelp standardise on MySQL and there were fewer and fewer people to support Postgres.  link:https://engineeringblog.yelp.com/2024/10/migrating-from-postgres-to-mysql.html[This post]  details the migration process and how they achieved it with zero downtime or data loss.
 * At the moment Red Hat are the owners and stewards of the open source Debezium project, and they’ve shared plans to  link:https://debezium.io/blog/2024/10/03/plan-to-move-debezium-to-foundation/[move it to a foundation] . This is a positive and healthy move for the community, and it’ll be good to see if it happens.
 * The Debezium project is running a  link:https://debezium.io/blog/2024/10/28/community-feedback-survey-2024/[survey]  to find out more about how people use it as well as capture input for future direction.
 
 
-=== Paper of the Month
+== Paper of the Month
 In their paper from June this year  link:https://db.cs.cmu.edu/papers/2024/whatgoesaround-sigmodrec2024.pdf[What Goes Around Comes Around...
 And Around…]  none other than Michael Stonebraker and Andrew Pavlo look at developments in the data store space in the last 20 years.
 To give you a flavour of it, the opening page states “_Many systems that started out rejecting the RM with much fanfare (think NoSQL) now expose a SQL-like interface for [relational model] databases._
@@ -70,7 +72,7 @@ One of the highlights at  link:https://www.p99conf.io/[P99 CONF] —an online ev
 We’re eagerly looking forward to the accompanying research paper; in the meantime there’s a summary of his talk  link:https://thenewstack.io/p99conf-how-ebpf-could-make-faster-database-systems/[here] .
 
 
-=== Events & Call for Papers (CfP)
+== Events & Call for Papers (CfP)
 * link:https://events.linuxfoundation.org/kubecon-cloudnativecon-north-america/[KubeCon / CloudNativeCon NA 2024]  (Salt Lake City, UT) *November 12-15*
 * link:https://reinvent.awsevents.com/[AWS re:Invent]  (Las Vegas, NV) *December 2-6*
 * link:https://ndclondon.com/[NDC London]  (London, UK) *January ‘25 27-31*
@@ -79,14 +81,14 @@ We’re eagerly looking forward to the accompanying research paper; in the meant
 * *Current 2025*(New Orleans, LA)*October 29-30*
 
 
-=== New Releases
+== New Releases
 * link:https://debezium.io/blog/2024/10/02/debezium-3-0-final-released/[Debezium 3.0.0.Final]
 * link:https://paimon.apache.org/releases/release-0.9/[Apache Paimon 0.9]
 * link:https://flink.apache.org/2024/10/25/apache-flink-kubernetes-operator-1.10.0-release-announcement/[Apache Flink Kubernetes Operator 1.10.0]
 * Not released at time of writing, but  link:https://lists.apache.org/thread/msk9m0qxwg37off4myr1pj9xmjtq49hz[Apache Kafka 3.9.0 is imminent]
 
 
-=== See you on the Socials?
+== See you on the Socials?
 For those of you mourning the heydays of “Data Twitter”, you might want to check out  link:https://bsky.app/[Bluesky]  which erupted over the weekend with a deluge of data folk following figures such as  link:https://bsky.app/profile/kelseyhightower.com[Kelsey Hightower]  and others onto the platform.
 The interface is very similar to Twitter’s (no head scratching over which server to join, sorry Mastodon), and the discourse so far is informative, respectful, and silly.
 
