--- a/content/post/il-2025-12.adoc
+++ b/content/post/il-2025-12.adoc
@@ -47,7 +47,7 @@ TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium
 
 == Stream Processing
 
-* Souquieres Adam has been busy, looking at https://medium.com/@souquieres.adam/kafka-streams-vs-apache-flink-a-pragmatic-comparison-for-stream-processing-and-why-you-should-66fc0b641b26[Kafka Streams vs Apache Flink] and https://medium.com/@souquieres.adam/where-are-we-really-with-streaming-technology-adoption-24b418b077fb[Where Are We Really With Streaming Technology Adoption?], as well as detailing https://medium.com/@souquieres.adam/why-i-stopped-using-high-level-streaming-joins-ff8178dd3bf9[Why I Stopped Using High-Level Streaming Joins]
+* Adam Souquieres has been busy, looking at https://medium.com/@souquieres.adam/kafka-streams-vs-apache-flink-a-pragmatic-comparison-for-stream-processing-and-why-you-should-66fc0b641b26[Kafka Streams vs Apache Flink] and https://medium.com/@souquieres.adam/where-are-we-really-with-streaming-technology-adoption-24b418b077fb[Where Are We Really With Streaming Technology Adoption?], as well as detailing https://medium.com/@souquieres.adam/why-i-stopped-using-high-level-streaming-joins-ff8178dd3bf9[Why I Stopped Using High-Level Streaming Joins]
 * Enes Harman takes a look at https://enesharman.medium.com/watermark-generation-in-flink-e184d93cda80[Watermark Generation in Flink].
     ** Shameless plug: If you're interested in watermarks, make sure to check out https://flink-watermarks.wtf/[Flink Watermarks…WTF] :)
 * A deep-dive from Shuo Cheng looking at https://hudi.apache.org/blog/2025/12/10/apache-hudi-11-deep-dive-optimizing-streaming-ingestion-with-flink/[improvements to ingestion with Flink in Apache Hudi 1.1].
